<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_root"
    tools:context=".presentation.view.LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/title_auth"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/lorem"
            android:layout_marginTop="@dimen/margin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/corner_radius_button"
            android:text="@string/create_an_account"
            android:padding="@dimen/margin"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue_ocean"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="100dp"
                android:layout_height="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_up_with"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="100dp"
                android:layout_height="1dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_btn_create_by_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icons8_google"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/margin"
                android:contentDescription="@string/content_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_already_have_an_account"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="@dimen/text_size_18"
                    android:layout_margin="8dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>