<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_root"
    tools:context=".presentation.view.auth.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="Welcome Back!"
            android:textSize="@dimen/title_dimen_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/lorem"
            android:layout_marginTop="@dimen/margin"/>



        <!--  email  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_badge_check"
            app:endIconMode="none"
            app:endIconTint="@color/blue_ocean"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/margin">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFielPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_badge_check"
            app:endIconMode="none"
            app:endIconTint="@color/blue_ocean"
            app:hintEnabled="false"
            android:layout_marginTop="16dp"
            android:enabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardCornerRadius="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/text_size_18"
                android:layout_margin="8dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_ocean"
                android:enabled="false"
                android:padding="@dimen/margin"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/corner_radius_button" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:indeterminateTint="@color/blue_ocean"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="100dp"
                android:layout_height="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_in_with"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="100dp"
                android:layout_height="1dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_btn_sign_in_by_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icons8_google"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/margin"
                android:contentDescription="@string/content_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_don_t_have_an_account"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="@dimen/text_size_18"
                    android:layout_margin="8dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>