<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_root"
    tools:context=".view.auth.SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="Create an Account"
            android:textColor="@color/black"
            android:textSize="@dimen/title_dimen_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/lorem_1" />


        <!--  email  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_badge_check"
            app:endIconMode="none"
            app:endIconTint="@color/blue_ocean"
            app:hintEnabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--  username  -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_badge_check"
            app:endIconMode="none"
            app:endIconTint="@color/blue_ocean"
            app:hintEnabled="false"
            android:enabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFielPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_badge_check"
            app:endIconMode="none"
            app:endIconTint="@color/blue_ocean"
            app:hintEnabled="false"
            android:enabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFielConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_badge_check"
            app:endIconMode="none"
            app:endIconTint="@color/blue_ocean"
            app:hintEnabled="false"
            android:enabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            android:text="Next"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/corner_radius_button"
            android:enabled="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="100dp"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:text="@string/or_sign_up_with" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="100dp"
                android:layout_height="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_btn_create_by_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description"
                android:padding="@dimen/margin"
                android:src="@drawable/ic_icons8_google" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_already_have_an_account" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/login"
                    android:textColor="@color/blue_ocean"
                    android:textSize="@dimen/text_size_18" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>